--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "@types/node": "^12.20.15",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "0.0.0-experimental-73ffce1b6-20210624",
+    "react-dom": "0.0.0-experimental-73ffce1b6-20210624",
     "react-scripts": "4.0.3",
+    "react-suspense-img": "^0.2.0",
     "typescript": "^4.3.4",
     "web-vitals": "^1.1.2"
   },
